# eakmeans

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  addheaders.py  setup.py
bins/kmeans/: Makefile
bins/kmeans/src/: main.cpp
cython/kmeans/: Makefile  dev_interactive.py  kmeans.pyx  kmeans.pyxbld  output.txt  setup.py
cython/kmeans/precythonised/: kmeans.cpp
cythonsrc/: kmeans.pyx
example_linking_to_eakmeans_library/: README  main.cpp
examples/: dense_200_5_header.txt  dense_200_5_noheader.txt  examples.py  sparse_randdim10_test_header.txt  sparse_randdim10_test_noheader.txt  sparse_randdim10_train_header.txt  sparse_randdim10_train_noheader.txt  testing_BF.py
examples/linking_example/: main.cpp
python/datasets/: mnist.py
src/: BaseGrowBatch.h  BaseGrowBatchMse.h  BaseGrowBatchPartitional.h  BaseSparseGrowBatch.h  BaseSparseGrowBatchMse.h  CMakeLists.txt  GBMse3v1.h  GBMseSimple.h  GBPSimple.h  SparseGBMse3v1.h  SparseGBMseSimple.h  YY17v2.h  YY17v3.h  YY17v5.h  YY17v6.h  YY21v3.h  YY21v4.h  YY21v5.h  alg_X_selkSN.h  arrutilv2copy.h  arrutilv2discrete.h  arrutilv2l0.h  arrutilv2l0blasless.h  arrutilv2l0withblas.h  arrutilv2l1.h  arrutilv2l2.h  arrutilv2l3.h  arrutilv2minmax.h  arrutilv2mse.h  barrierutil.cpp  barrierutil.h  baseYY.h  baseYYMNS.h  baseYYMSN.h  baseYYSMN.h  basecluster.h  basedensecentroidkmeans.h  baseelkan.h  baseelkanminibatch.h  baseexact.h  (+57 more)
utility/arrutilv2/: README
utility/arrutilv2/include/: arrutilv2copy.h  arrutilv2discrete.h  arrutilv2l1.h  arrutilv2l2.h  arrutilv2l3.h  arrutilv2minmax.h  arrutilv2mse.h
utility/arrutilv2/test/: Makefile
utility/blasutil/: Makefile
utility/blasutil/include/: blastemplates.h
utility/blasutil/python/: blastemplatiser.py
utility/blasutil/src/: blastemplates.cpp  main.cpp
utility/optionsutil/: Makefile  README
utility/optionsutil/include/: optionsutil.h
utility/optionsutil/src/: main.cpp  optionstuil.cpp
utility/pllkmeans/: Makefile
utility/pllkmeans/include/: basecluster.h  pllcluster.h  pllkmeansfuncs.hpp  pllkmeansfuncs_nonvoid.h  pllkmeansfuncs_void.h
utility/pllkmeans/src/: main.cpp  pllkmeansfuncs.cpp
utility/randomutil/: README
utility/randomutil/include/: randomarray.h  sample.h
utility/randomutil/tests/: Makefile
utility/sortutil/include/: sortutil.h
utility/sortutil/tests/: Makefile
utility/stdthreadutil/: Makefile
utility/stdthreadutil/include/: README  (+2 more)
utility/stringutil/: Makefile
(+49 files in other folders)
